# PREP-SHOT

./: .buildinfo  .gitattributes  .gitignore  .pylintrc  .readthedocs.yaml  404.html  Changelog.html  Citations.html  Contribution.html  Forum.html  Installation.html  Mathematical_notations.html  Model_input_output.html  README.md  References.html  Tutorial.html  config.json  genindex.html  global.properties  index.html  objects.inv  params.json  prep-shot.yml  py-modindex.html  pyproject.toml  requirements.txt  run.py  run_hydro.py  search.html  searchindex.js
_modules/: index.html
_sources/: Citations.rst.txt  Forum.rst.txt  Installation.rst.txt  Mathematical_notations.rst.txt  Model_input_output.rst.txt  References.rst.txt  index.rst.txt
api/: prepshot._model.co2.html  prepshot._model.cost.html  prepshot._model.demand.html  prepshot._model.generation.html  prepshot._model.head_iteration.html  prepshot._model.html  prepshot._model.hydro.html  prepshot._model.investment.html  prepshot._model.nondispatchable.html  prepshot._model.storage.html  prepshot._model.transmission.html  prepshot.html  prepshot.load_data.html  prepshot.logs.html  prepshot.model.html  prepshot.output_data.html  prepshot.parameters.html  prepshot.rules.html  prepshot.set_up.html  prepshot.solver.html  prepshot.utils.html
binder/: environment.yml  postBuild
doc/: make.bat  requirements.txt
input/: age.xlsx  capacity_factor.xlsx  carbon.xlsx  carbon_100.xlsx  carbon_50.xlsx  carbon_content.xlsx  carbon_emission_limit.csv  carbon_emission_limit.xlsx  carbon_offset_limit.xlsx  carbon_tax.csv  charge_efficiency.xlsx  connect.xlsx  demand.csv  demand.xlsx  discharge_efficiency.csv  discount_factor.csv  discount_factor.xlsx  distance.xlsx  efficiency_in.xlsx  efficiency_out.xlsx  emission_factor.csv  emission_factor.xlsx  energy_to_power_ratio.csv  energy_to_power_ratio.xlsx  existing_fleet.csv  final_reservoir_storage_level.xlsx  finance_private_debt_ratio.csv  finance_public_debt_max_system.csv  finance_public_debt_max_zone.csv  fuel_price.csv  fuel_price.xlsx  generation_lower_bound.xlsx  historical_capacity.csv  historical_capacity.xlsx  hydropower.xlsx  impulse_response_function.xlsx  inflow.csv  inflow.xlsx  init_storage_level.xlsx  initial_energy_storage_level.xlsx  (+84 more)
prepshot/: __init__.py  __main__.py  cli.py  engine.jl  load_data.py  logs.py  model.jl  model.py  model_hydro.py  output_data.py  parameters.py  pcm.py  rules.jl  rules.py  set_up.py  solver.py  utils.py
southeast_asia/: capacity_factor.csv  capacity_factor.xlsx  carbon_emission_limit.csv  carbon_emission_limit.xlsx  carbon_offset_limit.xlsx  carbon_tax.csv  charge_efficiency.xlsx  cost_of_private_debt.xlsx  cost_of_private_equity.xlsx  cost_of_public_debt.xlsx  demand.csv  demand.xlsx  discharge_efficiency.csv  discharge_efficiency.xlsx  discount_factor.csv  discount_factor.xlsx  distance.csv  distance.xlsx  emission_factor.csv  emission_factor.xlsx  energy_to_power_ratio.xlsx  existing_fleet.csv  final_reservoir_storage_level.xlsx  finance_cost_of_private_debt.csv  finance_public_debt_ratio.csv  fuel_price.csv  fuel_price.xlsx  historical_capacity.csv  historical_capacity.xlsx  inflow.csv  inflow.xlsx  initial_energy_storage_level.xlsx  initial_reservoir_storage_level.csv  initial_reservoir_storage_level.xlsx  lifetime.csv  lifetime.xlsx  new_technology_lower_bound.csv  new_technology_lower_bound.xlsx  new_technology_upper_bound.csv  new_technology_upper_bound.xlsx  (+71 more)
tests/: test_cambodia_laos_benchmark.py  test_long_format.py  test_optional_inputs.py  test_pjm5_benchmark.py  test_prepshot.py  test_regression.py  test_rts79_benchmark.py  test_rts96_benchmark.py  test_schema_version.py  test_utils.py
(+966 files in other folders)
