[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prepshot"
dynamic = ["version"]
description = "Pathways for Renewable Energy Planning coupling Short-term Hydropower OperaTion (PREP-SHOT)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Zhanwei Liu", email = "liuzhanwei@u.nus.edu"},
]
keywords = ["energy-systems", "optimization", "hydropower", "linear-programming"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.26.0",
    "scipy>=1.11.4",
    "pandas>=2.0.0",
    "xarray>=2023.10.0",
    "openpyxl>=3.1.2",
    "xlsxwriter>=3.1.0",
    "pyoptinterface>=0.2.5",
    "highsbox>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
]
docs = [
    "sphinx>=5",
    "sphinx-rtd-theme",
]
notebook = [
    "jupyterlab>=4",
    "matplotlib>=3.5",
    "h5netcdf>=1.0",
]

[project.urls]
Homepage = "https://github.com/PREP-NexT/PREP-SHOT"
Documentation = "https://prep-shot.readthedocs.io"
Issues = "https://github.com/PREP-NexT/PREP-SHOT/issues"
Changelog = "https://github.com/PREP-NexT/PREP-SHOT/blob/main/doc/source/Changelog.rst"

[project.scripts]
prepshot = "prepshot.cli:main"

[tool.setuptools.dynamic]
version = {attr = "prepshot.__version__"}

[tool.setuptools.packages.find]
include = ["prepshot*"]
exclude = ["tests*", "doc*", "tools*", "toolkit*", "example*", "input*", "southeast_asia*", "log*", "output*"]
